<resources>
    <string name="app_name">CinemaTickets</string>
    <string name="registration_email_hint">Электронная почта</string>
    <string name="registration_password_hint">Пароль</string>
    <string name="registration_name_hint">Имя</string>
    <string name="registration_phone_hint">Телефон</string>
    <string name="films_list_item_name_default">Неизвестный фильм</string>
    <string name="films_list_item_desc_default">Описание отсутствует.</string>
    <string name="films_list_item_show_more">Подробнее</string>
    <string name="films_fragment_films_not_found_message">Ошибка при загрузке списка фильмов :(</string>
    <string name="films_fragment_retry_btn">Перезагрузить</string>
    <string name="films_fragment_layout_header">Список доступных фильмов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film_desc_show_seats_btn">К покупке билетов</string>
    <string name="aboutProgram">О программе</string>
    <string name="aboutAuthor">Об авторе</string>
    <string name="about_author">Студент ИКБО-03-22\nПочта для связи: dhohlinov@mail.ru\nГод разработки приложения: 2024</string>
    <string name="author_name">Хохлинов Д.И.</string>
    <string name="about_program_header">О программе</string>
    <string name="about_program">Приложение для покупки билетов в кино\nГод разработки приложения: 2024</string>
    <string name="about_program_instruction">Здесь будет инструкция для пользователя</string>
    <string name="films_list_item_date_default">В ближайшее время показы не планируются</string>
    <string name="films_list_item_cinema_default"></string>
    <string name="film_desc_show_desc_btn">К описанию фильма</string>
    <string name="film_desc_publish_year">Год выпуска:</string>
    <string name="film_desc_publish_year_default">не указан</string>
    <string name="film_desc_genre">Жанр:</string>
    <string name="film_desc_genre_default">не указан</string>
    <string name="film_desc_rating">Оценка фильма:</string>
    <string name="film_desc_rating_default">не указана</string>
    <string name="film_desc">Описание фильма:</string>
    <string name="change_film_info_title">Изменение информации о фильме</string>
    <string name="add_film_info_title">Добавить информацию о фильме</string>
    <string name="change_film_info_title_hint">Название фильма</string>
    <string name="change_film_info_short_desc_hint">Краткое описание</string>
    <string name="change_film_info_desc_hint">Описание фильма</string>
    <string name="change_film_info_descURL_hint">Ссылка на описание фильма (опционально)</string>
    <string name="change_film_info_genre_hint">Жанр фильма</string>
    <string name="change_film_info_publish_year_hint">Год выпуска фильма</string>
    <string name="change_film_info_rating_hint">Оценка фильма</string>
    <string name="change_film_info_poster">Постер фильма (опционально)</string>
    <string name="change_film_info_save_changes_btn">Сохранить</string>
    <string name="change_film_info_discard_changes_btn">Отмена</string>
    <string name="change_film_info_delete_btn">Удалить</string>
    <string name="profile">Профиль</string>
    <string name="profileNameDefault">Имя профиля</string>
    <string name="profilePhoneDefault">Номер телефона не указан</string>
    <string name="profileEmailDefault">Почта не указана</string>
    <string name="profileBalanceDefault">0</string>
    <string name="profileBalance">"Баланс: "</string>
    <string name="profileDeposit">Пополнить баланс</string>
    <string name="profileQuit">Выйти из аккаунта</string>
    <string name="deposit_window_promocode">Промокод</string>
    <string name="cinemasNotFound">Показы этого фильма сейчас не запланированы ни в одном из кинотеатров, или все билеты на все показы уже были проданы.</string>
    <string name="selectCinemaText">Выберите один из кинотеатров и время показа, чтобы перейти к покупке билетов:</string>
    <string name="buyTicketsButton">К покупке билетов</string>
    <string name="buyTicketsTitle">Покупка билетов</string>
    <string name="buyTicketsChosenSeat">Выбранное место:</string>
    <string name="buyTicketsChosenSeatDefault">не выбрано</string>
    <string name="buyTicketsPrice">"Цена: "</string>
    <string name="buyTicketsPriceDefault">не указана</string>
    <string name="buyTicketsYourBalance">"Ваш баланс: "</string>
    <string name="buyTicketsYourBalanceDefault">нет информации</string>
    <string name="buyTicketsCanAfford">Вы можете купить билет на это место</string>
    <string name="buyTicketsCannotAfford">Вы не можете купить билет на это место: на вашем счете недостаточно средств</string>
    <string name="buyTicketBtnText">Купить билет</string>
    <string name="buyTicketsCinemaDefault">не указан</string>
    <string name="buyTicketsCinema">"Кинотеатр: "</string>
    <string name="buyTicketsShow">"Показ фильма: "</string>
    <string name="buyTicketsShowDefault">не указан</string>
    <string name="returnTicketBtnText">Вернуть билет</string>
    <string name="show_spinner_item_default">Описание показа</string>
    <string name="cinema_spinner_item_default">Описание кинотеатра</string>
    <string name="showBoughtTickets">Список купленных билетов</string>
    <string name="adminEditCinemasText">Редактировать сведения\nо кинотеатрах</string>
    <string name="boughtTicketsTitle">Купленные билеты</string>
    <string name="boughtTicketsInstruction">Выберите фильм, кинотеатр и сеанс, чтобы перейти к купленным вами билетам на этот сеанс.</string>
    <string name="boughtTicketsShowSession">К просмотру билетов</string>
    <string name="boughtTicketsNotFound">У вас нет купленных билетов ни на один из сеансов ни одного из фильмов.</string>
    <string name="film_spinner_item_default">Название и жанр фильма</string>
    <string name="editCinemas">Редактировать информацию о кинотеатрах и показах</string>
    <string name="editCinemaLayoutTitleDefault">Выберите кинотеатр для редактирования из списка выше или нажмите кнопку \"Добавить\" для создания нового кинотеатра.</string>
    <string name="cinemaNameHint">Название кинотеатра</string>
    <string name="cinemaAddressHint">Адрес кинотеатра</string>
    <string name="cinemaLatitudeHint">Широта (-90.0 ... 90.0)</string>
    <string name="editCinemaCoordinatesText">Географические координаты</string>
    <string name="cinemaLongitudeHint">Долгота (-180.0 ... 180.0)</string>
    <string name="editShowsBtn">К редактированию показов</string>
    <string name="editCinemaShowroomsText">Кинозалы</string>
    <string name="buyTicketsShowroom">Кинозал:</string>
    <string name="buyTicketsShowroomDefault">не указан</string>
    <string name="showroomNameHint">Название кинозала</string>
    <string name="showroomRowsHint">Количество рядов:</string>
    <string name="showroomColsHint">Количество мест в ряду:</string>
    <string name="saveCinemaBtn">Сохранить</string>
    <string name="deleteCinemaBtn">Удалить</string>
    <string name="cancelBtn">Отменить</string>
    <string name="select_show_selected_cinema">Выбранный кинотеатр:</string>
    <string name="select_show_selected_cinema_default">не указан</string>
    <string name="select_show_instruction">Выберите показ из списка ниже для его редактирования.</string>
    <string name="select_show_edit_btn_text">Редактировать</string>
    <string name="add_show_fragment_film">Фильм:</string>
    <string name="add_show_fragment_showroom">"Кинозал: "</string>
    <string name="showDateHint">Дата показа (формат: ДД.ММ.ГГ ЧЧ:ММ)</string>
    <string name="next">Далее</string>
    <string name="editShowOwner">"Владелец: "</string>
    <string name="editShowOwnerDefault">отсутствует</string>
    <string name="editShowSeatPrice">Цена места</string>
    <string name="editShowAnnulateTicket">Освободить место</string>
    <string name="editShowSavePrice">Сохранить цену</string>
    <string name="deleteBtn">Удалить</string>
    <string name="addNewShowTitle">Создание нового показа</string>
    <string name="editShowTitle">Редактирование показа</string>
    <string name="basePriceHint">Цена места по умолчанию</string>
</resources>