<?xml version="1.0" encoding="UTF-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registration_email_hint"
            android:inputType="textEmailAddress"
            android:text=""
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/passField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_password_hint"
            android:inputType="textPassword"
            android:text=""
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_name_hint"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_phone_hint"
            android:inputType="phone"
            android:text=""
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>